# rto_core

./: .travis.yml  README.md  dependencies.rosinstall
.github/workflows/: docker-image.yml
robotino_description/: CMakeLists.txt  package.xml
robotino_description/urdf/: robotino.urdf.xacro  robotino_body.urdf.xacro  robotino_parts.urdf.xacro  robotino_platform.urdf.xacro  rto-1.urdf  rto-1.urdf.xacro
robotino_description/urdf/sensors/: asus_xtion_pro.urdf.xacro  camera.urdf.xacro  hokuyo.urdf.xacro  kinect.urdf.xacro
robotino_local_move/: CMakeLists.txt  package.xml
robotino_local_move/include/: RobotinoLocalMoveClient.h  RobotinoLocalMoveServer.h
robotino_local_move/launch/: robotino_local_move_server.launch
robotino_local_move/src/: RobotinoLocalMoveClient.cpp  RobotinoLocalMoveServer.cpp  robotino_local_move_client_node.cpp  robotino_local_move_server_node.cpp
robotino_local_planner/: CMakeLists.txt  blp_plugin.xml  package.xml
robotino_local_planner/include/robotino_local_planner/: RobotinoLocalPlanner.h
robotino_local_planner/src/: RobotinoLocalPlanner.cpp
robotino_msgs/: CMakeLists.txt  package.xml
robotino_msgs/msg/: GripperState.msg
robotino_navigation/: CMakeLists.txt  package.xml
robotino_navigation/config/: global_costmap_params.yaml  local_costmap_params.yaml  robotino.rviz
robotino_navigation/launch/: gmapping.launch  map_server.launch  navigation.launch  rviz.launch  slam.launch
robotino_navigation/maps/: sample.pgm  sample.yaml  sim_simple.pgm
robotino_node/: CMakeLists.txt  package.xml
robotino_node/include/: CompactBHAROS.h  ElectricalGripperROS.h  GrapplerROS.h  MappingROS.h  NorthStarROS.h
robotino_node/launch/: robot_core.launch  robot_sensors.launch  robot_simple.launch  robotino_node.launch  robotino_simple_node.launch
robotino_node/src/: CompactBHAROS.cpp  ElectricalGripperROS.cpp  GrapplerROS.cpp  MappingROS.cpp  NavGoalROS.cpp  NorthStarROS.cpp  RobotinoMappingNode.cpp  RobotinoNode.cpp  find_missing_dependencies  robotino_mapping_node.cpp
robotino_safety/: CMakeLists.txt  package.xml
robotino_safety/include/: RobotinoSafety.h
robotino_safety/launch/: robotino_safety_node.launch
robotino_safety/src/: robotino_safety_node.cpp
robotino_teleop/: CMakeLists.txt
rto_bringup/: CMakeLists.txt  package.xml
rto_bringup/config/: rto.rviz
rto_bringup/launch/: robot.launch  rviz.launch
rto_bringup/launch/components/: base.xml  rs_d400.xml
rto_bringup/launch/robots/: base.xml  rto-1.xml  rto-2.xml  rto-3.xml
rto_core/: CMakeLists.txt  package.xml
rto_description/: CMakeLists.txt  package.xml
rto_description/urdf/: p3dx.urdf.xacro  robotino.urdf  robotino.urdf.xacro  robotino_body.urdf.xacro  robotino_parts.urdf.xacro  robotino_platform.urdf  robotino_platform.urdf.xacro  robotino_platform_kinect.urdf  robotino_platform_kinect.urdf.xacro  rto-1.urdf  rto-1.urdf.xacro  rto.urdf  rto.urdf.xacro  rto_body.urdf.xacro  rto_parts.urdf.xacro  rto_platform.urdf  rto_platform.urdf.xacro  rto_platform_kinect.urdf  rto_platform_kinect.urdf.xacro
rto_description/urdf/robots/: rto-2.urdf.xacro  rto-3.urdf.xacro  rto.urdf.xacro
rto_local_move/: CMakeLists.txt  package.xml
rto_local_move/action/: LocalMove.action
rto_local_move/include/: RTOLocalMoveClient.h  RTOLocalMoveServer.h  RobotinoLocalMoveClient.h  RobotinoLocalMoveServer.h
rto_local_move/launch/: rto_local_move_server.launch
rto_local_move/src/: RTOLocalMoveClient.cpp  RTOLocalMoveServer.cpp  RobotinoLocalMoveClient.cpp  RobotinoLocalMoveServer.cpp  robotino_local_move_client_node.cpp  robotino_local_move_server_node.cpp  rto_local_move_client_node.cpp  rto_local_move_server_node.cpp
rto_local_planner/: CMakeLists.txt  blp_plugin.xml  package.xml
rto_local_planner/include/: RTOLocalPlanner.h
rto_local_planner/include/robotino_local_planner/: RobotinoLocalPlanner.h
rto_local_planner/src/: RTOLocalPlanner.cpp  RobotinoLocalPlanner.cpp
rto_msgs/: CMakeLists.txt  package.xml
rto_msgs/msg/: BHAReadings.msg  GrapplerReadings.msg  NorthStarReadings.msg  SetBHAPressures.msg  SetGrapplerAxes.msg  SetGrapplerAxis.msg
rto_navigation/: CMakeLists.txt  package.xml
rto_navigation/config/: base_local_planner_params.yaml  costmap_common_params.yaml  mapper_params_online_sync.yaml  robotino.rviz  rto.rviz
rto_navigation/launch/: gmapping.launch  map_server.launch  navigation.launch  rviz.launch  slam.launch
rto_navigation/maps/: home-rd.pgm  home-rd.yaml  sample.yaml  sim_simple.yaml  simple_world.yaml
rto_node/: CMakeLists.txt  package.xml
rto_node/include/: AnalogInputArrayROS.h  CompactBHAROS.h  DigitalInputArrayROS.h  DigitalOutputArrayROS.h  ElectricalGripperROS.h  EncoderInputROS.h  GrapplerROS.h  InitialPoseROS.h  MotorArrayROS.h  NavGoalROS.h  NorthStarROS.h  OdometryROS.h  PowerManagementROS.h  RTOCameraNode.h  RTOLaserRangeFinderNode.h  RTOMappingNode.h  RTONode.h  RTOOdometryNode.h  RobotinoMappingNode.h  RobotinoNode.h
rto_node/launch/: only_robotino_node.launch  robot_core.launch  robot_sensors.launch  robotino_node.launch  robotino_simple_node.launch
rto_node/src/: AnalogInputArrayROS.cpp  ComROS.cpp  CompactBHAROS.cpp  DigitalInputArrayROS.cpp  DigitalOutputArrayROS.cpp  ElectricalGripperROS.cpp  EncoderInputROS.cpp  GrapplerROS.cpp  MotorArrayROS.cpp  NorthStarROS.cpp  OdometryROS.cpp  PowerManagementROS.cpp  RTOCameraNode.cpp  RTOLaserRangeFinderNode.cpp  RTOMappingNode.cpp  RTONode.cpp  RTOOdometryNode.cpp  RobotinoNode.cpp  find_missing_dependencies  robotino_node.cpp  rto_camera_node.cpp  rto_laserrangefinder_node.cpp  rto_mapping_node.cpp  rto_node.cpp  rto_odometry_node.cpp
rto_safety/: CMakeLists.txt  package.xml
rto_safety/include/: RTOSafety.h  RobotinoSafety.h
rto_safety/launch/: robotino_safety_node.launch
rto_safety/src/: RTOSafety.cpp  RobotinoSafety.cpp  rto_safety_node.cpp
rto_teleop/: CMakeLists.txt  package.xml
rto_teleop/include/: JoystickTeleop.h
rto_teleop/launch/: joystick_teleop.launch  keyboard_teleop.launch
rto_teleop/src/: JoystickTeleop.cpp
(+3 files in other folders)
