<?xml version="1.0"?>
<package>
  <name>robotino_navigation</name>
  <version>0.1.0</version>
  <description>The robotino_navigation package</description>
  <maintainer email="suraj.nair@tum-create.edu.sg">Suraj Nair</maintainer>
  <maintainer email="aravind.v@tum-create.edu.sg">Aravind V</maintainer>
  <license>BSD</license>
  <url type="website">http://wiki.ros.org/robotino_navigation</url>
  <author email="verbeek@servicerobotics.eu">Christian Verbeek</author>
  <!-- The *_depend tags are used to specify dependencies -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>robotino_node</build_depend>
  <run_depend>robotino_node</run_depend>
</package>
