<?xml version="1.0"?>
<package format="2">
  <name>rto_bringup</name>
  <version>0.0.0</version>
  <description>The rto_bringup package</description>
  <maintainer email="robin.dietrich@tum.de"></maintainer>
  <author email="robin.dietrich@tum.de">Robin Dietrich</author>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>gazebo_ros</exec_depend>

  <run_depend>rto_node</run_depend>
  <run_depend>rto_teleop</run_depend>
  <run_depend>rto_description</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>urg_node</run_depend>
  <run_depend>openni2_launch</run_depend>
  <run_depend>depthimage_to_laserscan</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
